testsuite/tests/typecheck/should_fail/tcfail002.hs
module ShouldFail where

c (x:y) = x
c z = z
